VA-238-10: Fix pill not showing whole text in certain situations;
If hanke tai asianumero is too long it would make the keskeneräinen
pills text clip itself inside the pill

--- a/va-virkailija/web/va/hakemus-list/Pill.module.less
+++ b/va-virkailija/web/va/hakemus-list/Pill.module.less
@@ -5,9 +5,6 @@
   font-size: 13px;
   border: 1px solid;
   text-align: center;
-  text-overflow: ellipsis;
-  overflow: hidden;
-  white-space: nowrap;
   display: flex;
   justify-content: center;
   align-items: center;
